Fixed design of mainmenu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Main Menu"
-        android:textSize="32dp"
+        android:textSize="36dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
         android:text="Wake-Up"
-        android:background="#27cf1e"
+        android:background="@drawable/wakeupbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -54,7 +52,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="170dp"
         android:layout_marginTop="120dp"
-        android:background="#3768e9"
+        android:background="@drawable/schedulebutton"
         android:text="Schedule"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +68,7 @@
         android:layout_marginStart="170dp"
         android:layout_marginTop="280dp"
         android:text="Contacts"
-        android:background="#edb53d"
+        android:background="@drawable/contactsbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,8 +82,8 @@
         android:layout_marginEnd="170dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="280dp"
-        android:background="#e63636"
         android:text="Messages"
+        android:background="@drawable/messagesbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
