--- a/app/src/main/res/layout/activity_wake_up.xml
+++ b/app/src/main/res/layout/activity_wake_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eamv.dmu17he.lan_crew_app.WakeUp">
+    tools:context="eamv.dmu17he.lan_crew_app.ActivityWakeUp">
 
     <Button
         android:id="@+id/BookWakeUp"
