--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:text="Schedule"
         android:textSize="36dp"
+        android:textColor="#000"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
