--- a/app/src/main/res/layout/activity_choose_edit_or_delete.xml
+++ b/app/src/main/res/layout/activity_choose_edit_or_delete.xml
@@ -17,5 +17,7 @@
         android:text="Choose to edit or delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
 </android.support.constraint.ConstraintLayout>
