--- a/app/src/main/res/layout/activity_delete_hall.xml
+++ b/app/src/main/res/layout/activity_delete_hall.xml
@@ -13,11 +13,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/border_style"
         android:text="Choose hall to delete"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <Button
         android:id="@+id/deleteaccept"
