--- a/app/src/main/res/layout/activity_create_hall.xml
+++ b/app/src/main/res/layout/activity_create_hall.xml
@@ -20,13 +20,14 @@
     <EditText
         android:id="@+id/hallName"
         android:layout_width="wrap_content"
-        android:layout_height="47dp"
+        android:layout_height="35dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/border_style"
         android:ems="10"
         android:hint="Hall name"
-        android:maxLines="1"
         android:inputType="textPersonName"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
         android:ems="10"
         android:hint="Number of rows"
         android:inputType="textPersonName"
+        android:background="@drawable/border_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +57,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:background="@drawable/border_style"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,6 +73,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Create"
+        android:background="@drawable/roundedbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
