--- a/app/src/main/res/layout/activity_Start_wake_up.xml
+++ b/app/src/main/res/layout/activity_Start_wake_up.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="80dp"
         android:text="Book WakeUp"
+        android:background="@drawable/roundedbutton"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +30,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="60dp"
         android:text="Bookings Overview"
+        android:background="@drawable/roundedbutton"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +45,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="60dp"
         android:text="Administrate"
+        android:background="@drawable/roundedbutton"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
