--- a/app/src/main/res/layout/activity_delete_hall.xml
+++ b/app/src/main/res/layout/activity_delete_hall.xml
@@ -13,7 +13,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border_style"
         android:text="Choose hall to delete"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +28,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Accept"
+        android:background="@drawable/roundedbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
