--- a/app/src/main/res/layout/activity_edit_hall.xml
+++ b/app/src/main/res/layout/activity_edit_hall.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Hall name"
+        android:background="@drawable/border_style"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,6 +43,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Number of rows"
+        android:background="@drawable/border_style"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -57,6 +59,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Number of columns"
+        android:background="@drawable/border_style"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
