--- a/app/src/main/res/layout/activity_wake_up_details.xml
+++ b/app/src/main/res/layout/activity_wake_up_details.xml
@@ -27,12 +27,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
         android:text="Time:"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="120dp" />
+        app:layout_constraintTop_toBottomOf="@+id/wakeupdetails" />
 
     <TextView
         android:id="@+id/placedetails"
@@ -40,12 +41,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
         android:text="Place:"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="189dp" />
+        app:layout_constraintTop_toBottomOf="@+id/timedetails" />
 
     <Button
         android:id="@+id/pokebutton"
@@ -64,13 +66,14 @@
     <TextView
         android:id="@+id/commentdetails"
         android:layout_width="325dp"
-        android:layout_height="100dp"
+        android:layout_height="102dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/border_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="263dp" />
+        app:layout_constraintTop_toBottomOf="@+id/placedetails" />
 
     <TextView
         android:id="@+id/commentdetail"
