--- a/app/src/main/res/layout/activity_book_awake_up.xml
+++ b/app/src/main/res/layout/activity_book_awake_up.xml
@@ -28,7 +28,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:id="@+id/itemtext"/>
 
     <TextView
         android:id="@+id/textView5"
