--- a/app/src/main/res/layout/activity_book_awake_up.xml
+++ b/app/src/main/res/layout/activity_book_awake_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eamv.dmu17he.lancrewapp.activities.BookAWakeUp">
+    tools:context="eamv.dmu17he.lancrewapp.activities.BookAWakeUpActivity">
 
     <TextView
         android:id="@+id/textView2"
