--- a/app/src/main/res/layout/activity_create_hall.xml
+++ b/app/src/main/res/layout/activity_create_hall.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eamv.dmu17he.lancrewapp.activities.CreateHall">
+    tools:context="eamv.dmu17he.lancrewapp.activities.CreateHallActivity">
 
     <TextView
         android:id="@+id/createHall"
