added BookingListOverview, ItemAdapter, activity_bookings_overview

--- a/app/src/main/res/layout/activity_administrate.xml
+++ b/app/src/main/res/layout/activity_administrate.xml
@@ -58,5 +58,5 @@
         android:background="@drawable/roundedbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/deletebutton" />
 </android.support.constraint.ConstraintLayout>
