removed excess, rename and fixed CreateHall

--- a/app/src/main/res/layout/activity_administrate.xml
+++ b/app/src/main/res/layout/activity_administrate.xml
@@ -25,9 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="8dp"
-        android:text="Create Hall"
+        android:layout_marginTop="50dp"
         android:background="@drawable/roundedbutton"
+        android:text="Create Hall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +40,8 @@
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
-        android:text="Edit Hall"
         android:background="@drawable/roundedbutton"
+        android:text="Edit Hall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,9 +54,10 @@
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
-        android:text="Delete Hall"
         android:background="@drawable/roundedbutton"
+        android:text="Delete Hall"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/deletebutton" />
+        app:layout_constraintTop_toBottomOf="@+id/edithallbutton" />
 </android.support.constraint.ConstraintLayout>
