--- a/app/src/main/res/layout/activity_bookings_overview.xml
+++ b/app/src/main/res/layout/activity_bookings_overview.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/item"
+        tools:listitem="@layout/bookinglistitem"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
