--- a/app/src/main/res/layout/activity_create_hall.xml
+++ b/app/src/main/res/layout/activity_create_hall.xml
@@ -80,4 +80,17 @@
         app:layout_constraintTop_toBottomOf="@+id/hallName"
         tools:text="Number of rows" />
 
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.818"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
