--- a/app/src/main/res/layout/activity_choose_edit_or_delete.xml
+++ b/app/src/main/res/layout/activity_choose_edit_or_delete.xml
@@ -20,4 +20,46 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="0dp"
+        android:layout_height="22dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chooseeditordelete" />
+
+    <TextView
+        android:id="@+id/halleditdeletename"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        tools:text="Hall" />
+
+    <TextView
+        android:id="@+id/columneditdeletenumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/halleditdeletename"
+        tools:text="Column" />
+
+    <TextView
+        android:id="@+id/roweditdeletenumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/columneditdeletenumber"
+        tools:text="Row" />
+
 </android.support.constraint.ConstraintLayout>
