--- a/app/src/main/res/layout/activity_book_awake_up.xml
+++ b/app/src/main/res/layout/activity_book_awake_up.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Book Wake-Up"
+        android:text="@string/bookwakeup"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
-        android:text="Time:"
+        android:text="@string/time"
         android:textSize="30dp"
         app:layout_constraintEnd_toStartOf="@+id/timespinner"
         app:layout_constraintHorizontal_bias="0.8"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Accept"
+        android:text="@string/Accept"
         android:background="@drawable/roundedbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Comment"
+        android:text="@string/time"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/commettextfield"
         app:layout_constraintEnd_toEndOf="parent"
