--- a/app/src/main/res/layout/activity_edit_hall.xml
+++ b/app/src/main/res/layout/activity_edit_hall.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="Edit or delete Hall"
+        android:text="@string/edit_or_deletehall"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginTop="60dp"
         android:background="@drawable/border_style"
         android:ems="10"
-        android:hint="Hall name"
+        android:hint="@string/Hall_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Number of rows"
+        android:hint="@string/Number_of_rows"
         android:background="@drawable/border_style"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Number of columns"
+        android:hint="@string/Number_of_columns"
         android:background="@drawable/border_style"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,10 +111,13 @@
         android:layout_marginBottom="68dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/delete"
+        android:layout_marginTop="8dp"
         android:background="@drawable/roundedbutton"
+        android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toEndOf="@+id/savechangesbutton" />
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toEndOf="@+id/savechangesbutton"
+        app:layout_constraintTop_toBottomOf="@+id/editnumberofcolumns"
+        app:layout_constraintVertical_bias="0.984" />
 </android.support.constraint.ConstraintLayout>
