--- a/app/src/main/res/layout/activity_administrate.xml
+++ b/app/src/main/res/layout/activity_administrate.xml
@@ -13,8 +13,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Administrate"
-        android:textSize="35dp"
+        android:text="@string/administrate"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/roundedbutton"
-        android:text="Create Hall"
+        android:text="@string/create_hall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/roundedbutton"
-        android:text="Edit/Delete Hall"
+        android:text="@string/edit_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/roundedbutton"
-        android:text="Delete Hall"
+        android:text="@string/deletehall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
